[gd_scene load_steps=11 format=3 uid="uid://djuyffty67srr"]

[ext_resource type="Script" path="res://ui/dialogue/dialogue_manager.gd" id="1_o57ei"]
[ext_resource type="Texture2D" uid="uid://bq5nnpfkm2mro" path="res://assets/Hart.png" id="4_6p0ra"]
[ext_resource type="Texture2D" uid="uid://dk6p1s5bpw4cd" path="res://assets/ui/dialogue/dialogue.png" id="5_lie01"]
[ext_resource type="PackedScene" uid="uid://7k13nn8u18rb" path="res://ui/dialogue/dialogue_tools/dialogue.tscn" id="6_5qytb"]
[ext_resource type="FontFile" uid="uid://b0jaq0i5ulxxa" path="res://assets/ui/Born2bSportyV2.ttf" id="6_sg46o"]
[ext_resource type="Theme" uid="uid://dkk0nnkkys24f" path="res://assets/ui/main_theme.tres" id="7_7dmhj"]
[ext_resource type="Texture2D" uid="uid://dfgo13jkxt3fl" path="res://assets/ui/dialogue/dialogue_title.png" id="7_plklm"]
[ext_resource type="Script" path="res://ui/dialogue/dialogue_tools/dialogue_item.gd" id="7_tf6gt"]
[ext_resource type="AudioStream" uid="uid://bm6v3wxp428ol" path="res://assets/ui/dialogue/dialogue_item/blah blah.ogg" id="8_xvucl"]

[sub_resource type="Resource" id="Resource_oggqw"]
script = ExtResource("7_tf6gt")
name = ""
text = "If you see this text, then you did not load the dialogues correctly, Oops!"
next_line_idx = -1
is_player = true
"Enable Choices" = false
character = ExtResource("4_6p0ra")
expression = ExtResource("4_6p0ra")
audio = ExtResource("8_xvucl")

[node name="DialogueManager" type="MarginContainer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -540.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 25
script = ExtResource("1_o57ei")
metadata/_edit_lock_ = true

[node name="Dialogue" parent="." instance=ExtResource("6_5qytb")]
unique_name_in_owner = true
dialogue_items = Array[ExtResource("7_tf6gt")]([SubResource("Resource_oggqw")])

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PlayerMargin" type="MarginContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="HBoxContainer/PlayerMargin"]
custom_minimum_size = Vector2(480, 540)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
alignment_vertical = 2

[node name="PlayerBody" type="TextureRect" parent="HBoxContainer/PlayerMargin/AspectRatioContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_6p0ra")

[node name="PlayerExpression" type="TextureRect" parent="HBoxContainer/PlayerMargin/AspectRatioContainer/PlayerBody"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogueMargin" type="MarginContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 320
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 25

[node name="DialogueBodyTexture" type="NinePatchRect" parent="HBoxContainer/DialogueMargin"]
unique_name_in_owner = true
custom_minimum_size = Vector2(882, 195)
layout_mode = 2
texture = ExtResource("5_lie01")

[node name="Panel" type="Panel" parent="HBoxContainer/DialogueMargin/DialogueBodyTexture"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(785, 155)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 47.5
offset_top = 30.0
offset_right = -49.5
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/DialogueMargin/DialogueBodyTexture/Panel"]
custom_minimum_size = Vector2(785, 155)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.005
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.925
offset_right = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/DialogueMargin/DialogueBodyTexture/Panel/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(720, 155)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="DialogueBody" type="RichTextLabel" parent="HBoxContainer/DialogueMargin/DialogueBodyTexture/Panel/HBoxContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(720, 48)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource("7_7dmhj")
theme_override_constants/line_separation = 3
theme_override_fonts/normal_font = ExtResource("6_sg46o")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "HEYE HEF EHF HFEYFHEFEHFYEF HEYFHEYFEHYEFHYEHE YFHYEHFYEFHEFYHEFYEHFYEHFYEFHEYFH HEUF HUFE"
fit_content = true
scroll_active = false
visible_characters_behavior = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/DialogueMargin/DialogueBodyTexture/Panel/HBoxContainer"]
custom_minimum_size = Vector2(65, 155)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 17
theme_override_constants/margin_bottom = 5

[node name="NextArrow" type="Label" parent="HBoxContainer/DialogueMargin/DialogueBodyTexture/Panel/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("6_sg46o")
theme_override_font_sizes/font_size = 48
text = "..."
vertical_alignment = 2

[node name="DialogueTitleTexture" type="NinePatchRect" parent="HBoxContainer/DialogueMargin/DialogueBodyTexture"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.032
anchor_top = 0.077
anchor_right = 0.25
anchor_bottom = 0.077
offset_left = -0.167999
offset_top = -73.015
offset_right = -0.25
offset_bottom = -0.0150013
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_plklm")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/DialogueMargin/DialogueBodyTexture/DialogueTitleTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 15

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/DialogueMargin/DialogueBodyTexture/DialogueTitleTexture/MarginContainer"]
layout_mode = 2

[node name="DialogueTitle" type="Label" parent="HBoxContainer/DialogueMargin/DialogueBodyTexture/DialogueTitleTexture/MarginContainer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_sg46o")
theme_override_font_sizes/font_size = 48
text = "John"
uppercase = true

[node name="NPCMargin" type="MarginContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="HBoxContainer/NPCMargin"]
custom_minimum_size = Vector2(480, 540)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
alignment_vertical = 2

[node name="NPCBody" type="TextureRect" parent="HBoxContainer/NPCMargin/AspectRatioContainer2"]
unique_name_in_owner = true
layout_mode = 2
flip_h = true

[node name="NPCExpression" type="TextureRect" parent="HBoxContainer/NPCMargin/AspectRatioContainer2/NPCBody"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flip_h = true
